fix: config & issue creation